--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     
     <style>
@@ -551,4 +551,9 @@
         </div>
     </div>
 </body>
+<script>
+    document.querySelectorAll(".btn").addEventListener("click",function(){
+        window.location.assign("./select.html")
+    })
+</script>
 </html>
